=======
CHANGES
=======

3.5.3 (unreleased)
------------------

- ...

3.5.2 (2007-11-01)
------------------

- Reactivated functional tests.

3.5.1 (2007-10-31)
------------------

- Resolve ``ZopeSecurityPolicy`` and ``IRolePermissionManager`` deprecation
  warning.

3.5.0 (2007-10-11)
------------------

- Updated package meta-data.

3.5.0a1 (2007-06-29)
--------------------

* Updated bootstrap script to current version.

* Store length of ``BTreeContainer`` in its own ``Length`` object for faster
  ``__len__`` implementation of huge containers.


3.4.0a1 (2007-04-22)
--------------------

- Initial release as a separate project, corresponds to ``zope.app.container``
  from Zope 3.4.0a1.